# meme-bot

./: .dockerignore  .gitignore  .mergify.yml  Cargo.toml  Dockerfile  Dockerfile.rust  Pipfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  memes.py  pyproject.toml
.github/: dependabot.yml
.github/scripts/: add_ssh_key.sh  decrypt_secret.sh  githubaction-key.pem.gpg
.github/workflows/: automerge.yml  dev.yml  main.yml  pr-build.yml
apps/bot/: command.py  config.py  memebot.py  player.py
apps/meme_generator/: __init__.py  meme.py
apps/meme_generator/plugins/: __init__.py  drawtext.py  selector.py  splittext.py
meme_generator/: __init__.py  allmemes.py  meme.py  run.py
meme_generator/plugins/: __init__.py  baseplugin.py  drawimage.py  drawinput.py  drawtext.py  input.py  splittext.py  spongifytext.py  trimtext.py  utils.py
memebot/: command.py  error.py  guildconfig.py  help.py  hooks.py  main.py  memebot.py  player.py  quote.py
memebot/cogs/: __init__.py  beans.py  calendar.py  chatgpt.py  chatstats.py  hey.py  meme.py  meta.py  outofcontext.py  player.py  poker.py  quote.py  reminder.py  rolldice.py  suggest.py  tarot.py  whisper.py  wolframalpha.py
memebot/memes/: __init__.py
memebot/memes/plugins/: baseplugin.py  drawimage.py  input.py  selector.py  settext.py  splittext.py  spongifytext.py  utils.py
memebot/player/: __init__.py  abc.py  events.py  item.py  player.py  youtube.py
src/: main.py  main.rs  primes.rs
src/memes/: __init__.py  basememe.py  change_my_mind.py  config.json  genericmeme.py  meme.py  memebase.py  memeloader.py  mouthfeel.py  spongebob.py  utils.py
src/memes/plugins/: __init__.py  baseplugin.py  drawimage.py  drawtext.py  overridetext.py  settext.py  splittext.py  spongifytext.py  trimtext.py  utils.py
tests/: runtests.py  test_player.py
