[tool.poetry]
name = "memebot"
version = "0.1.0"
description = ""
authors = ["ropc <itslikeroar2412@gmail.com>"]
packages = [
    { include = "memebot" },
    { include = "meme_generator" },
]

[tool.poetry.scripts]
bot = "memebot.memebot:run"
bot-debug = "memebot.memebot:run_debug"
meme = "meme_generator.run:run_meme"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = {extras = ["voice"], version = "^2.2.2"}
pillow = "^9.5"
pygtrie = "^2.5"
pydantic = "^1.10"
youtube-dl = "^2021.12.17"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
ptvsd = "^4.3.2"
tailer = "^0.4.1"
python-dateutil = "^2.8.2"
dateparser = "^1.1.8"

[tool.poetry.dev-dependencies]
ipython = "^8.12"
rope = "^1.7.0"
mypy = "^1.2"
requests = "^2.28.2"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
jedi = "0.17.2"
parso = "0.7.1"

[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"
